# Jacquard

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  adding-a-pdk.html  build.rs  print.html  pyproject.toml  searchindex.js  searchindex.json  timing-violations.html
.github/workflows/: ci.yml  mcu-soc-rebuild.yml
adr/: index.html
api/: src-files.js
api/jacquard/: all.html  index.html  sidebar-items.js
api/jacquard/aig/: enum.DriverType.html  enum.EndpointGroup.html  enum.SimControlType.html  fn.bitset_or_inplace.html  fn.bitset_union_popcount.html  index.html  struct.AIG.html  struct.DFF.html  struct.DisplayNode.html  struct.RAMBlock.html  struct.SimControlNode.html  struct.TimingReport.html  struct.TopoTraverser.html  struct.XPropStats.html
api/jacquard/cell_library/: enum.ClockEdge.html  enum.LoadError.html  enum.MaskGranularity.html  enum.Polarity.html  index.html  sidebar-items.js  struct.CellEntry.html  struct.ChainedPinProvider.html  struct.ClockPin.html  struct.EnablePin.html  struct.ManifestFile.html  struct.RamPortMap.html  struct.RuntimeCellLibrary.html  struct.WriteMaskPin.html
api/jacquard/flatten/: fn.resolve_corner_index.html  index.html  struct.FlattenedScriptV1.html
api/jacquard/gf180mcu/: fn.extract_cell_type.html  fn.is_gf180mcu_cell.html  index.html  sidebar-items.js  struct.GF180MCULeafPins.html
api/jacquard/gf180mcu_pdk/: constant.POWER_PIN_NAMES.html  fn.decompose_combinational.html  fn.decompose_with_pdk.html  fn.is_delay_cell.html  fn.is_filler_cell.html  fn.is_io_pad_cell.html  fn.is_multi_output_cell.html  fn.is_power_pin.html  fn.is_sequential_cell.html  fn.is_tie_cell.html  fn.load_pdk_models.html  index.html  sidebar-items.js
api/jacquard/pdk/: enum.CellLibrary.html  enum.PdkVariant.html  fn.detect_library.html  fn.detect_library_from_file.html  index.html  sidebar-items.js
api/jacquard/pdk_decomp/: index.html  sidebar-items.js  struct.DecompResult.html
api/jacquard/sim/: index.html  sidebar-items.js
api/jacquard/sky130/: fn.extract_cell_type.html  fn.is_aigpdk_cell.html  fn.is_sky130_cell.html  index.html  sidebar-items.js  struct.SKY130LeafPins.html
api/jacquard/sky130_pdk/: fn.decompose_from_behavioral.html  fn.decompose_with_pdk.html  fn.eval_behavioral_model.html  fn.is_multi_output_cell.html  fn.is_sequential_cell.html  fn.is_tie_cell.html  fn.load_pdk_models.html  fn.parse_functional_model.html  fn.parse_udp.html  index.html  sidebar-items.js  struct.BehavioralGate.html  struct.BehavioralModel.html  struct.PdkModels.html  struct.UdpModel.html  struct.UdpRow.html
api/jacquard/testbench/: enum.UartState.html  enum.WatchlistEntry.html  index.html  sidebar-items.js  struct.ClockConfig.html  struct.FlashConfig.html  struct.GpioConfig.html  struct.JtagConfig.html  struct.PortMapping.html  struct.SramInitConfig.html  struct.TestbenchConfig.html  struct.TimingSimConfig.html  struct.UartConfig.html  struct.UartEvent.html  struct.UartMonitor.html  struct.Watchlist.html  struct.WatchlistSignal.html
api/jacquard/timing_report/: struct.TimingReport.html
api/search.index/: 00034645b942.js  00155255f814.js  001ecf5a7022.js  00219e499ce1.js  0028c29e221b.js  002ad80cd6fe.js  00368d001489.js  006c081b2048.js  0070665b10a4.js  00b7a421b48d.js  01607e509208.js  0163cda22692.js  01900708a3bf.js  0193ddcf8644.js  019566398149.js  01a5be6a9c17.js  01a6eaa7210f.js  01cec4d4a639.js  01d98e45e06f.js  01e05034c586.js  01ff62fceb34.js  021adac4ad66.js  0223ae8354bb.js  0232552c2df1.js  0240175ad183.js  024e6e03c8f5.js  029ea586d631.js  02b1069f1ef8.js  02c719407cbd.js  02dbda8b2697.js  02fd0f0b217a.js  030775be01f2.js  030ea4f6708b.js  03310b3fc25c.js  034345f91186.js  034b6cf413bc.js  035a13e06f4c.js  037f4fa63a73.js  039b6271dc57.js  03aace328ce5.js  (+1327 more)
api/search.index/desc/: 28b3b219cf17.js  420b915103f9.js  51285c39dc34.js  (+8 more)
csrc/: kernel_v1.metal
docs/: README.md  SUMMARY.md  adding-a-pdk.md  release-process.md  timing-violations.md
docs/adr/: 0009-opensta-verilog-reader-inputs.md  0010-declarative-cell-metadata.md  0011-ram-port-mapping-schema.md  0012-cdc-jitter-injection.md  0013-plural-peripheral-configs.md  0014-aig-as-simulation-ir.md  0015-boomerang-execution-model.md  0016-selective-x-propagation.md  0017-cosim-execution-model.md  README.md
docs/handoffs/: gf180mcu-phase4b-handoff.md  release-prep-handoff.md
docs/plans/: README.md  declarative-cell-metadata.md  gf180mcu-enablement.md  multi-clock-and-stimulus-architecture.md  multi-peripheral-cosim.md  phase-0-ir-and-oracle.md  ws2-opensta-to-ir.md  ws3-cosim-sdf-followup.md
python/jacquard/: pyproject.toml
python/jacquard/src/jacquard/: __init__.py  config.py  errors.py  regression.py  result.py  runner.py
python/jacquard/tests/: test_config.py  test_regression.py  test_runner.py
scripts/: capture_bitbang.py
src/: aig.rs  cell_library.rs  flatten.rs  gf180mcu.rs  gf180mcu_pdk.rs  lib.rs  pdk.rs  sky130.rs  sky130_pdk.rs  testbench.rs
src/sim/: cosim_metal.rs  mod.rs  run_params.rs  setup.rs  sram_dump.rs  sram_preload.rs  trace_signals.rs  vcd_io.rs
tests/dual_uart/: check_pass.py  dual_uart.v  dual_uart_synth.gv  sim_config.json  synth.tcl
tests/gf180mcu_chess_chip_top/: README.md
tests/jtag_minimal/: .gitignore  README.md  sim_config.json  trace_signals.txt
(+194 files in other folders)
