[package]
name = "jacquard"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated RTL logic simulator with vector-driven setup/hold timing analysis. Maps gate-level netlists to a virtual manycore Boolean processor and runs them on Metal / CUDA / HIP."
repository = "https://github.com/ChipFlow/Jacquard"
homepage = "https://chipflow.io"
keywords = ["rtl", "simulation", "gpu", "timing", "eda"]
categories = ["simulation", "hardware-support"]
license = "Apache-2.0"
links = "jacquard"

[dependencies]
cachedhash = "0.2.0"
clap = { version = "4.5.15", features = ["derive"] }
clilog = { version = "0.2.5", path = "vendor/eda-infra-rs/clilog" }
compact_str = "0.7.1"
indexmap = { version = "2.4.0", features = ["rayon"] }
itertools = "0.13.0"
mt-kahypar = "0.2.0"
netlistdb = { version = "0.4.6", path = "vendor/eda-infra-rs/netlistdb" }
opensta-to-ir = { path = "crates/opensta-to-ir" }
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
serde = { version = "1.0.208", features = ["derive"] }
smallvec = "1.13"
serde_bare = "0.5.0"
serde_json = "1.0"
sverilogparse = { version = "0.4.2", path = "vendor/eda-infra-rs/sverilogparse" }
tempdir = "0.3.7"
toml = "0.8"
timing-ir = { path = "crates/timing-ir" }
ulib = { version = "0.3.13", path = "vendor/eda-infra-rs/ulib" }
vcd-ng = { version = "0.2.0", path = "vendor/eda-infra-rs/vcd-ng" }

[build-dependencies]
ucc = { version = "0.2.5", path = "vendor/eda-infra-rs/ucc" }
cc = "1.0"

[features]
cuda = ["ulib/cuda"]
hip = ["ulib/hip"]
metal = ["ulib/metal", "dep:metal", "dep:objc", "dep:block"]

[dependencies.metal]
version = "0.29"
optional = true

[dependencies.objc]
version = "0.2"
optional = true

[dependencies.block]
version = "0.1"
optional = true

[[bin]]
name = "jacquard"

[dev-dependencies]
criterion = "0.5"
flatbuffers = "25"
tempfile = "3"

[[bench]]
name = "event_buffer"
harness = false

[[bench]]
name = "xprop"
harness = false
