[project]
name = "jacquard"
version = "0.1.0"
description = "Python API for Jacquard GPU-accelerated RTL simulator"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = ["pytest>=7.0", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jacquard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
